login auth & list customer
